# has_rse

./: README.md  generate.py  index.html  pyproject.toml  universities.json
.github/workflows/: deploy.yml
has_rse/: __init__.py  blacklist.py  html.py  known_rse_groups.py  r1.py
